refactor(tests): 更新测试代码中的方法调用和异常声明
- 将 Declarables 获取方法从 get(0) 替换为 getFirst()
- 移除 IdempotentAspectTests 中方法的异常抛出声明
- 简化 RabbitMqRetrySandboxTests 方法签名移除不必要的 throws 声明